--- a/subsys/spm/CMakeLists.txt
+++ b/subsys/spm/CMakeLists.txt
@@ -3,4 +3,4 @@ cmake_minimum_required(VERSION 3.8.2)
 include($ENV{ZEPHYR_BASE}/cmake/app/boilerplate.cmake NO_POLICY_SCOPE)
 project(NONE)
 
-target_sources(app PRIVATE src/main.c)
+target_sources(app PRIVATE src/secure_partition_manager.c)
