--- a/samples/nrf9160/http_modem_fota/prj.conf
+++ b/samples/nrf9160/http_modem_fota/prj.conf
@@ -34,6 +34,7 @@ CONFIG_MAIN_THREAD_PRIORITY=7
 # Heap and stacks
 CONFIG_HEAP_MEM_POOL_SIZE=16384
 CONFIG_MAIN_STACK_SIZE=8192
+CONFIG_MPU_STACK_GUARD=y
 
 CONFIG_DEBUG=y
 
@@ -46,4 +47,5 @@ CONFIG_NRF_DFU_HTTP_MAX_RESPONSE_SIZE=2048
 CONFIG_LOG=y
 CONFIG_LOG_DEFAULT_LEVEL=4
 CONFIG_LOG_IMMEDIATE=y
+CONFIG_LOG_PRINTK=y
 
