west: Update manifest to point to rc1 branch
Now pointing to correct remote and branch.

Signed-off-by: Jan Tore Guggedal <jantore.guggedal@nordicsemi.no>

--- a/west.yml
+++ b/west.yml
@@ -27,6 +27,8 @@ manifest:
       # nRF Connect SDK base URL.
     - name: ncs
       url-base: https://github.com/NordicPlayground
+    - name: jtguggedal
+      url-base: https://github.com/jtguggedal
 
   # The list of external projects for the nRF Connect SDK.
   #
@@ -34,7 +36,8 @@ manifest:
     - name: fw-nrfconnect-zephyr
       path: zephyr
       west-commands: scripts/west-commands.yml
-      revision: 578dac80f7c3bafb3d0e98c0c31b072139251395
+      revision: pca20035_pilot_rc1
+      remote: jtguggedal
     - name: fw-nrfconnect-mcuboot
       path: mcuboot
       revision: 59fde9c792bfaa36887c860fb8cd0ca1f1bc4db5
