manifest: update fw-nrfconnect-zephyr
Update Zephyr reference to include the integration of nrfx v1.7.0.

Signed-off-by: Andrzej Głąbek <andrzej.glabek@nordicsemi.no>

--- a/west.yml
+++ b/west.yml
@@ -37,7 +37,7 @@ manifest:
     - name: fw-nrfconnect-zephyr
       path: zephyr
       west-commands: scripts/west-commands.yml
-      revision: 0bf5263b0522bb5cfac84eefdfdee86dc2c67e3e
+      revision: pull/117/head
     - name: fw-nrfconnect-mcuboot
       path: mcuboot
       revision: 73d4cd12928fb53930e7bcbe6c376b7c797317bf
