manifest: update fw-nrfconnect-zephyr
Update Zephyr reference to include the integration of nrfx v1.7.1.

Signed-off-by: Andrzej Głąbek <andrzej.glabek@nordicsemi.no>

--- a/west.yml
+++ b/west.yml
@@ -38,7 +38,7 @@ manifest:
     - name: fw-nrfconnect-zephyr
       path: zephyr
       west-commands: scripts/west-commands.yml
-      revision: d70aa052bc4b333e97a36b4e5832a8509b4aa417
+      revision: pull/125/head
     - name: fw-nrfconnect-mcuboot
       path: mcuboot
       revision: 6168414cb103f97b016160396ccc88d9ed45d457
