boards: nrf9160_pca20035: Support only newest HW version
This patch removes support for early prototype hardware and
moves to only support latest revision. This simplifies the
device tree file sctructure. In addition is the configuration
og the PMIC moved to board_secure.c so that the board will
function properly for secure-only applications as well.

Signed-off-by: Jan Tore Guggedal <jantore.guggedal@nordicsemi.no>

--- a/boards/arm/nrf9160_pca20035/CMakeLists.txt
+++ b/boards/arm/nrf9160_pca20035/CMakeLists.txt
@@ -4,12 +4,11 @@
 #
 # SPDX-License-Identifier: LicenseRef-BSD-5-Clause-Nordic
 
-zephyr_library()
+if(CONFIG_TRUSTED_EXECUTION_SECURE AND !CONFIG_MCUBOOT)
+	zephyr_library()
+	zephyr_library_sources(board_secure.c)
+endif()
 
 zephyr_library_sources_ifdef(
 	CONFIG_TRUSTED_EXECUTION_NONSECURE
 	board_nonsecure.c)
-
-zephyr_library_sources_ifdef(
-        CONFIG_TRUSTED_EXECUTION_SECURE
-	board_secure.c)
