--- a/boards/arm/nrf9160_pca20035/nrf9160_pca20035_defconfig
+++ b/boards/arm/nrf9160_pca20035/nrf9160_pca20035_defconfig
@@ -2,9 +2,7 @@ CONFIG_ARM=y
 CONFIG_SOC_FAMILY_NRF=y
 CONFIG_SOC_SERIES_NRF91X=y
 CONFIG_SOC_NRF9160_SICA=y
-
-# PCA20035 v0.3.0 is set as the default board
-CONFIG_BOARD_NRF9160_PCA20035_V0_3_0=y
+CONFIG_BOARD_NRF9160_PCA20035=y
 
 # Enable MPU
 CONFIG_ARM_MPU=y
@@ -26,6 +24,14 @@ CONFIG_UART_0_NRF_UARTE=y
 # Enable console
 CONFIG_CONSOLE=y
 CONFIG_UART_CONSOLE=y
+
+# Enable I2C
+CONFIG_I2C=y
+CONFIG_I2C_NRFX=y
+CONFIG_I2C_2=y
+
+# Enable power management IC ADP536x
+CONFIG_ADP536X=y
 
 # Disable entropy driver, as it's not yet implemented for nRF9160
 CONFIG_ENTROPY_NRF5_RNG=n
