applications: asset_tracker: Updates and fixes
1. Switch to using cloud API.
2. Adding GPS.
3. Fixes to handle MQTT keepalive
4. Add battery monitoring
5. Reboot on missing CONNACK and hardfault
6. ADXL362 config fix
8. Add basic cloud commands
9. Add environment API
10. Turn of ICCID reading.
11. Enable bandlock for pca20035.

Signed-off-by: Jan Tore Guggedal <jantore.guggedal@nordicsemi.no>
Signed-off-by: Henrik Malvik Halvorsen <henrik.halvorsen@nordicsemi.no>
Signed-off-by: Joakim Andre Tønnesen <joakim.tonnesen@nordicsemi.no>
Signed-off-by: Jon Helge Nistad <jon.helge.nistad@nordicsemi.no>

--- a/applications/asset_tracker/CMakeLists.txt
+++ b/applications/asset_tracker/CMakeLists.txt
@@ -22,9 +22,37 @@ zephyr_library_include_directories(
   src/orientation_detector
   src/ui
   src/cloud_codec
+  src/battery_monitor
   )
 
 # Application sources
 add_subdirectory(src/orientation_detector)
 add_subdirectory(src/ui)
 add_subdirectory(src/cloud_codec)
+add_subdirectory(src/gps_controller)
+if (CONFIG_BATTERY_MONITOR)
+add_subdirectory(src/battery_monitor)
+endif()
+
+include_directories(src/env_sensors)
+
+if (CONFIG_USE_BME680_BSEC)
+	target_sources(app PRIVATE src/env_sensors//bsec.c)
+
+	set (bsec_dir ${CMAKE_CURRENT_SOURCE_DIR}/src/env_sensors/BSEC_1.4.7.3_Generic_Release)
+	include_directories(${bsec_dir}/API)
+	target_sources(app PRIVATE ${bsec_dir}/examples/bsec_integration.c)
+	include_directories(${bsec_dir}/examples)
+	target_sources(app PRIVATE ${bsec_dir}/API/bme680.c)
+
+	set(BSEC_LIB_DIR ${bsec_dir}/algo/bin/Normal_version/gcc/Cortex_M4F)
+	set(BSEC_INCLUDE_DIR ${bsec_dir}/algo/bin/Normal_version/gcc/Cortex_M4F)
+	add_library(bsec_lib STATIC IMPORTED GLOBAL)
+	add_dependencies(bsec_lib math_lib bsec_target)
+	set_target_properties(bsec_lib PROPERTIES IMPORTED_LOCATION "${BSEC_LIB_DIR}/libalgobsec.a")
+	set_target_properties(bsec_lib PROPERTIES INTERFACE_INCLUDE_DIRECTORIES ${BSEC_INCLUDE_DIR})
+	target_link_libraries(bsec_lib INTERFACE -L${LIBC_LIBRARY_DIR})
+	target_link_libraries(app PUBLIC bsec_lib)
+else()
+	target_sources(app PRIVATE src/env_sensors/env_sensors.c)
+endif()
