--- a/applications/asset_tracker/prj.conf
+++ b/applications/asset_tracker/prj.conf
@@ -3,6 +3,9 @@ CONFIG_NEWLIB_LIBC=y
 CONFIG_TEST_RANDOM_GENERATOR=y
 CONFIG_ASSERT=y
 CONFIG_REBOOT=y
+CONFIG_LOG=y
+CONFIG_LOG_IMMEDIATE=y
+CONFIG_HW_STACK_PROTECTION=y
 
 # Network
 CONFIG_NETWORKING=y
@@ -18,20 +21,44 @@ CONFIG_MQTT_MAX_PACKET_LENGTH=2048
 CONFIG_POWER_OPTIMIZATION_ENABLE=n
 CONFIG_LTE_LINK_CONTROL=y
 CONFIG_LTE_AUTO_INIT_AND_CONNECT=n
+CONFIG_LTE_LINK_CONTROL_LOG_LEVEL_DBG=y
+
+CONFIG_LTE_NETWORK_MODE_NBIOT=n
+CONFIG_LTE_LEGACY_PCO_MODE=n
+CONFIG_LTE_PSM_REQ_RPTAU="00000110"
+CONFIG_LTE_PSM_REQ_RAT="00000000"
 
 # Modem info
-CONFIG_MODEM_INFO=y
+CONFIG_MODEM_INFO=n
 
 # BSD library
 CONFIG_BSD_LIBRARY=y
+CONFIG_BSD_LIBRARY_TRACE_ENABLED=n
 
 # nRF Cloud
 CONFIG_CLOUD_API=y
 CONFIG_NRF_CLOUD=y
+CONFIG_NRF_CLOUD_LOG_LEVEL_DBG=y
 
 # Sensors
-CONFIG_GPS_USE_SIM=y
+CONFIG_ENVIRONMENT_DATA_SEND_INTERVAL=10
 CONFIG_ACCEL_USE_SIM=y
+CONFIG_ENV_USE_SIM=y
+CONFIG_BATTERY_MONITOR=n
+CONFIG_CLOUD_BUTTON=n
+
+# GPS
+CONFIG_NRF9160_GPS=y
+CONFIG_NRF9160_GPS_LOG_LEVEL_DBG=y
+CONFIG_GPS_USE_EXTERNAL=y
+CONFIG_GPS_DEV_NAME="NRF9160_GPS"
+
+CONFIG_GPS_CONTROL=y
+CONFIG_GPS_CONTROL_FIRST_FIX_CHECK_DELAY=10
+CONFIG_GPS_CONTROL_FIX_COUNT=3
+CONFIG_GPS_CONTROL_FIX_CHECK_INTERVAL=30
+CONFIG_GPS_CONTROL_FIX_TRY_TIME=360
+CONFIG_GPS_CONTROL_PSM_DISABLE_ON_STOP=n
 
 # Library for buttons and LEDs
 CONFIG_DK_LIBRARY=y
@@ -48,12 +75,24 @@ CONFIG_MAIN_THREAD_PRIORITY=7
 # Heap and stacks
 CONFIG_HEAP_MEM_POOL_SIZE=16384
 CONFIG_MAIN_STACK_SIZE=8192
-CONFIG_GPS_SIM_THREAD_STACK_SIZE=1024
 CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2048
-CONFIG_HW_STACK_PROTECTION=y
+
+# Settings
+#CONFIG_FLASH=y
+#CONFIG_FLASH_PAGE_LAYOUT=y
+#CONFIG_FLASH_MAP=y
+#CONFIG_FCB=y
+#CONFIG_SETTINGS=y
+#CONFIG_SETTINGS_FCB=y
+#CONFIG_MPU_ALLOW_FLASH_WRITE=y
 
 # Disable native network stack to save some memory
-CONFIG_NET_IPV4=n
-CONFIG_NET_IPV6=n
-CONFIG_NET_UDP=n
-CONFIG_NET_TCP=n
+#CONFIG_NET_IPV4=n
+#CONFIG_NET_IPV6=n
+#CONFIG_NET_UDP=n
+#CONFIG_NET_TCP=n
+
+# MCUBOOT
+CONFIG_BOOTLOADER_MCUBOOT=y
+CONFIG_IMG_MANAGER=y
+CONFIG_MCUBOOT_IMG_MANAGER=y
