--- a/applications/asset_tracker/prj_nrf9160_pca20035ns.conf
+++ b/applications/asset_tracker/prj_nrf9160_pca20035ns.conf
@@ -1,11 +1,12 @@
 # General config
 CONFIG_NEWLIB_LIBC=y
 CONFIG_TEST_RANDOM_GENERATOR=y
-CONFIG_ASSERT=y
+CONFIG_ASSERT=n
 CONFIG_REBOOT=y
 CONFIG_LOG=y
 CONFIG_LOG_IMMEDIATE=y
-CONFIG_LOG_STRDUP_MAX_STRING=128
+CONFIG_HW_STACK_PROTECTION=y
+CONFIG_BOARD_LOG_LEVEL_DBG=y
 
 # Network
 CONFIG_NETWORKING=y
@@ -21,9 +22,20 @@ CONFIG_MQTT_MAX_PACKET_LENGTH=2048
 CONFIG_POWER_OPTIMIZATION_ENABLE=n
 CONFIG_LTE_LINK_CONTROL=y
 CONFIG_LTE_AUTO_INIT_AND_CONNECT=n
+CONFIG_LTE_LINK_CONTROL_LOG_LEVEL_DBG=y
+
+CONFIG_LTE_NETWORK_MODE_NBIOT=n
+CONFIG_LTE_LEGACY_PCO_MODE=n
+CONFIG_LTE_PSM_REQ_RPTAU="00000110"
+CONFIG_LTE_PSM_REQ_RAT="00000000"
+
+CONFIG_LTE_LOCK_BANDS=y
+# Enable band 2, 3, 4, 8, 12, 13 ,20 and 28
+CONFIG_LTE_LOCK_BAND_MASK="1000000010000001100010001110"
 
 # Modem info
 CONFIG_MODEM_INFO=y
+CONFIG_MODEM_INFO_ADD_SIM_ICCID=n
 
 # BSD library
 CONFIG_BSD_LIBRARY=y
@@ -36,10 +48,7 @@ CONFIG_NRF_CLOUD_LOG_LEVEL_DBG=y
 
 # Sensors
 CONFIG_SENSOR=y
-CONFIG_GPS_USE_SIM=y
-CONFIG_GPS_SIM_TRIGGER_TIMER_MSEC=30000
-CONFIG_GPS_SIM_MAX_STEP=1000
-CONFIG_GPS_SIM_ELLIPSOID=y
+CONFIG_BATTERY_MONITOR=y
 CONFIG_ACCEL_USE_EXTERNAL=y
 CONFIG_ACCEL_DEV_NAME="ADXL362"
 CONFIG_ADXL362=y
@@ -47,16 +56,35 @@ CONFIG_ADXL362_TRIGGER_OWN_THREAD=y
 CONFIG_ADXL362_ABS_REF_MODE=1
 CONFIG_ADXL362_ACTIVITY_THRESHOLD=200
 CONFIG_ADXL362_INACTIVITY_THRESHOLD=200
-CONFIG_TEMP_USE_EXTERNAL=y
-CONFIG_TEMP_DEV_NAME="BME680"
+CONFIG_ADXL362_INTERRUPT_MODE=1
+
+CONFIG_ENV_USE_EXTERNAL=y
+CONFIG_ENV_DEV_NAME="BME680"
+CONFIG_ENVIRONMENT_DATA_SEND_INTERVAL=10
+
+CONFIG_USE_BME680_BSEC=n
 CONFIG_BME680=y
+CONFIG_SPI_NRFX_SPIM_MISO_NO_PULL=y
+
+# GPS
+CONFIG_NRF9160_GPS=y
+CONFIG_NRF9160_GPS_LOG_LEVEL_DBG=y
+CONFIG_GPS_USE_EXTERNAL=y
+CONFIG_GPS_DEV_NAME="NRF9160_GPS"
+
+CONFIG_GPS_CONTROL_FIRST_FIX_CHECK_DELAY=10
+CONFIG_GPS_CONTROL_FIX_COUNT=3
+CONFIG_GPS_CONTROL_FIX_CHECK_INTERVAL=30
+CONFIG_GPS_CONTROL_FIX_TRY_TIME=360
+CONFIG_GPS_CONTROL_PSM_DISABLE_ON_STOP=n
 
 # Library for buttons and LEDs
 CONFIG_DK_LIBRARY=y
 CONFIG_DK_LIBRARY_INVERT_LEDS=n
 
 # Console
-CONFIG_CLOUD_UA_CONSOLE=y
+CONFIG_CLOUD_UA_BUTTONS=n
+CONFIG_CLOUD_UA_CONSOLE=n
 CONFIG_CONSOLE_SUBSYS=y
 CONFIG_CONSOLE_HANDLER=y
 CONFIG_CONSOLE_GETCHAR=y
@@ -67,5 +95,18 @@ CONFIG_MAIN_THREAD_PRIORITY=7
 # Heap and stacks
 CONFIG_HEAP_MEM_POOL_SIZE=16384
 CONFIG_MAIN_STACK_SIZE=8192
-CONFIG_GPS_SIM_THREAD_STACK_SIZE=1024
 CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2048
+
+# Settings
+CONFIG_FLASH=y
+CONFIG_FLASH_PAGE_LAYOUT=y
+CONFIG_FLASH_MAP=y
+CONFIG_FCB=y
+CONFIG_SETTINGS=y
+CONFIG_SETTINGS_FCB=y
+CONFIG_MPU_ALLOW_FLASH_WRITE=y
+
+# MCUBOOT
+CONFIG_BOOTLOADER_MCUBOOT=y
+CONFIG_IMG_MANAGER=y
+CONFIG_MCUBOOT_IMG_MANAGER=y
