--- a/applications/asset_tracker/prj_qemu_x86.conf
+++ b/applications/asset_tracker/prj_qemu_x86.conf
@@ -9,6 +9,7 @@ CONFIG_FLOAT=y
 CONFIG_USE_AT_HOST=n
 
 # nRF Cloud
+CONFIG_CLOUD_API=y
 CONFIG_NRF_CLOUD=y
 CONFIG_NRF_CLOUD_PROVISION_CERTIFICATES=y
 CONFIG_NRF_CLOUD_CERTIFICATES_FILE="certificates.h"
@@ -17,7 +18,7 @@ CONFIG_NRF_CLOUD_SEC_TAG=1
 # Sensors
 CONFIG_CLOUD_BUTTON_INPUT=1
 CONFIG_FLIP_INPUT=1
-CONFIG_TEMP_SIM_BUTTON=1
+CONFIG_ENV_SIM_BUTTON=1
 CONFIG_GPS_USE_SIM=y
 CONFIG_ACCEL_USE_SIM=y
 
