Mocking kernel.h makes the native app crashing.
Signed-off-by: Christopher Métrailler <christopher.metrailler@nordicsemi.no>

--- a/tests/unity/at_cmd_parser/at_params/CMakeLists.txt
+++ b/tests/unity/at_cmd_parser/at_params/CMakeLists.txt
@@ -8,6 +8,10 @@ cmake_minimum_required(VERSION 3.13.1)
 include($ENV{ZEPHYR_BASE}/cmake/app/boilerplate.cmake NO_POLICY_SCOPE)
 project(test_at_params)
 
+# create mock for Kernel API
+# FIXME: Mocking kernel.h will make the native application crashing
+cmock_handle(${ZEPHYR_BASE}/include/kernel.h kernel)
+
 # generate runner for the test
 test_runner_generate(src/at_params_test.c)
 
