--- a/tests/unity/at_cmd_parser/at_params/CMakeLists.txt
+++ b/tests/unity/at_cmd_parser/at_params/CMakeLists.txt
@@ -8,9 +8,8 @@ cmake_minimum_required(VERSION 3.13.1)
 include($ENV{ZEPHYR_BASE}/cmake/app/boilerplate.cmake NO_POLICY_SCOPE)
 project(test_at_params)
 
-# create mock for Kernel API
-# FIXME: Mocking kernel.h will make the native application crashing
-cmock_handle(${ZEPHYR_BASE}/include/kernel.h kernel)
+# create mock for the at_params_alloc header
+cmock_handle(${ZEPHYR_BASE}/../nrf/lib/at_cmd_parser/include/at_params_alloc.h)
 
 # generate runner for the test
 test_runner_generate(src/at_params_test.c)
