applications: nrf_desktop: Switch to Nordic LL
Jira:DESK-228

Signed-off-by: Pawel Dunaj <pawel.dunaj@nordicsemi.no>

--- a/applications/nrf_desktop/configuration/nrf52840_pca20041/app_ZDebugWithShell.conf
+++ b/applications/nrf_desktop/configuration/nrf52840_pca20041/app_ZDebugWithShell.conf
@@ -191,6 +191,8 @@ CONFIG_PMW3360_IRQ_GPIO_DEV_NAME="GPIO_0"
 CONFIG_PMW3360_IRQ_GPIO_PIN=21
 CONFIG_PMW3360_ORIENTATION_90=y
 
+CONFIG_BT_LL_NRFXLIB=y
+
 ################################################################################
 
 CONFIG_ASSERT=y
