--- a/applications/nrf_desktop/configuration/nrf52_pca20037/app_ZDebugWithShell.conf
+++ b/applications/nrf_desktop/configuration/nrf52_pca20037/app_ZDebugWithShell.conf
@@ -147,6 +147,8 @@ CONFIG_LINKER_ORPHAN_SECTION_PLACE=y
 
 CONFIG_NFCT_PINS_AS_GPIOS=y
 
+CONFIG_BT_LL_NRFXLIB=y
+
 ################################################################################
 
 CONFIG_ASSERT=y
