--- a/applications/nrf_desktop/configuration/nrf52840_pca10056/app_ZDebug.conf
+++ b/applications/nrf_desktop/configuration/nrf52840_pca10056/app_ZDebug.conf
@@ -112,6 +112,8 @@ CONFIG_BT_CONN_CTX=y
 CONFIG_EVENT_MANAGER=y
 CONFIG_LINKER_ORPHAN_SECTION_PLACE=y
 
+CONFIG_BT_LL_NRFXLIB=y
+
 ################################################################################
 
 CONFIG_ASSERT=y
