--- a/applications/nrf_desktop/configuration/nrf52840_pca10059/app_ZReleaseMCUBoot.conf
+++ b/applications/nrf_desktop/configuration/nrf52840_pca10059/app_ZReleaseMCUBoot.conf
@@ -118,6 +118,8 @@ CONFIG_BT_GATT_HIDS_C=y
 CONFIG_EVENT_MANAGER=y
 CONFIG_LINKER_ORPHAN_SECTION_PLACE=y
 
+CONFIG_BT_LL_NRFXLIB=y
+
 ################################################################################
 # Bootloader Configuration
 
