--- a/applications/nrf_desktop/configuration/nrf52840_pca20041/app_ZRelease.conf
+++ b/applications/nrf_desktop/configuration/nrf52840_pca20041/app_ZRelease.conf
@@ -177,3 +177,5 @@ CONFIG_PMW3360_CS_GPIO_PIN=13
 CONFIG_PMW3360_IRQ_GPIO_DEV_NAME="GPIO_0"
 CONFIG_PMW3360_IRQ_GPIO_PIN=21
 CONFIG_PMW3360_ORIENTATION_90=y
+
+CONFIG_BT_LL_NRFXLIB=y
