--- a/applications/nrf_desktop/configuration/nrf52_pca20037/app_ZReleaseMCUBoot.conf
+++ b/applications/nrf_desktop/configuration/nrf52_pca20037/app_ZReleaseMCUBoot.conf
@@ -135,6 +135,10 @@ CONFIG_BT_CONN_CTX=y
 CONFIG_EVENT_MANAGER=y
 CONFIG_LINKER_ORPHAN_SECTION_PLACE=y
 
+CONFIG_NFCT_PINS_AS_GPIOS=y
+
+CONFIG_BT_LL_NRFXLIB=y
+
 ################################################################################
 # Bootloader Configuration
 
