--- a/boards/arm/nrf9160_pca20035/CMakeLists.txt
+++ b/boards/arm/nrf9160_pca20035/CMakeLists.txt
@@ -4,12 +4,7 @@
 #
 # SPDX-License-Identifier: LicenseRef-BSD-5-Clause-Nordic
 
-zephyr_library()
-
-zephyr_library_sources_ifdef(
-	CONFIG_TRUSTED_EXECUTION_NONSECURE
-	board_nonsecure.c)
-
-zephyr_library_sources_ifdef(
-        CONFIG_TRUSTED_EXECUTION_SECURE
-	board_secure.c)
+if(CONFIG_BOARD_NRF9160_PCA20035NS)
+  zephyr_library()
+  zephyr_library_sources(board_nonsecure.c)
+endif()
