--- a/boards/arm/nrf9160_pca20035/nrf9160_pca20035_common.dts
+++ b/boards/arm/nrf9160_pca20035/nrf9160_pca20035_common.dts
@@ -64,10 +64,64 @@
 		buzzer-pwm = &pwm1;
 		nmos-pwm = &pwm2;
 	};
+
+	buttons {
+		compatible = "gpio-keys";
+
+		button0: button_0 {
+			gpios = <&gpio0 26 GPIO_PUD_PULL_UP>;
+			label = "Button 1";
+		};
+	};
+
+	leds {
+		compatible = "gpio-leds";
+		red_led: led_1 {
+			gpios = <&gpio0 29 0>;
+			label = "RGB red channel";
+		};
+		green_led: led_2 {
+			gpios = <&gpio0 30 0>;
+			label = "RGB green channel";
+		};
+		blue_led: led_3 {
+			gpios = <&gpio0 31 0>;
+			label = "RGB blue channel";
+		};
+		sense_red_led: led_4 {
+			gpios = <&gpio0 0 0>;
+			label = "RGB red channel";
+		};
+		sense_green_led: led_5 {
+			gpios = <&gpio0 1 0>;
+			label = "RGB green channel";
+		};
+		sense_blue_led: led_6 {
+			gpios = <&gpio0 2 0>;
+			label = "RGB blue channel";
+		};
+	};
+
+	aliases {
+		sw0 = &button0;
+		led0 = &red_led;
+		led1 = &green_led;
+		led2 = &blue_led;
+		sense-led0 = &sense_red_led;
+		sense-led1 = &sense_green_led;
+		sense-led2 = &sense_blue_led;
+		rgb-pwm = &pwm0;
+		buzzer-pwm = &pwm1;
+		nmos-pwm = &pwm2;
+	};
 };
 
 &adc {
 	status = "okay";
+};
+
+&adc {
+	status ="okay";
 };
 
 &gpiote {
@@ -75,6 +129,33 @@
 };
 
 &gpio0 {
+	status = "okay";
+};
+
+/* PWM0 is intended for RGB LED control */
+&pwm0 {
+	status = "okay";
+	ch0-pin = <29>;
+	ch1-pin = <30>;
+	ch2-pin = <31>;
+};
+
+/* PWM1 is intended for buzzer control */
+&pwm1 {
+	status = "okay";
+	ch0-pin = <28>;
+};
+
+/* PWM2 is intended for NMOS transistor control */
+&pwm2 {
+	status = "okay";
+	ch0-pin = <13>;
+	ch1-pin = <14>;
+	ch2-pin = <15>;
+	ch3-pin = <16>;
+};
+
+&pwm3 {
 	status = "okay";
 };
 
