--- a/applications/asset_tracker/prj_nrf9160_pca20035ns.conf
+++ b/applications/asset_tracker/prj_nrf9160_pca20035ns.conf
@@ -50,6 +50,7 @@ CONFIG_ADXL362_INACTIVITY_THRESHOLD=200
 CONFIG_TEMP_USE_EXTERNAL=y
 CONFIG_TEMP_DEV_NAME="BME680"
 CONFIG_BME680=y
+CONFIG_BATTERY_MONITOR=y
 
 # Library for buttons and LEDs
 CONFIG_DK_LIBRARY=y
