applications: Add USB to UART bridge
Adds USB to UART bridge intended for PCA20035.

Signed-off-by: Jan Tore Guggedal <jantore.guggedal@nordicsemi.no>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -13,6 +13,7 @@
 # Applications
 /applications/asset_tracker/              @joakimtoe @jtguggedal @rlubos
 /applications/nrf_desktop/                @pdunaj
+/applications/usb_uart_bridge/            @joakimtoe @jtguggedal
 # Boards
 /boards/                                  @ioannisg @anangl
 # All cmake related files
