--- a/drivers/lte_link_control/Kconfig
+++ b/drivers/lte_link_control/Kconfig
@@ -25,6 +25,14 @@ config LTE_LOCK_BANDS
 	help
 		Enable LTE band locks for bands 3, 4, 13 and 20.
 		Other bands cannot be used when this setting is enabled.
+if LTE_LOCK_BANDS
+config LTE_LOCK_BAND_MASK
+	string "Band lock mask bit string"
+	default "10000001000000001100"
+	help
+		Bit string, LSB is band 1. Leading zeroes can be omitted.
+		Maximum length 88 characters.
+endif # LTE_LOCK_BANDS
 
 config LTE_PSM_REQ_RPTAU
 	string "PSM setting requested periodic TAU"
