--- a/samples/nrf9160/aws_fota/prj.conf
+++ b/samples/nrf9160/aws_fota/prj.conf
@@ -11,7 +11,7 @@ CONFIG_IMG_MANAGER=y
 CONFIG_BOOTLOADER_MCUBOOT=y
 
 # Enable DOWNLOAD libs
-CONFIG_NRF_DOWNLOAD_CLIENT=y
+CONFIG_HTTP_DOWNLOAD=y
 
 # Networking
 CONFIG_NETWORKING=y
@@ -45,7 +45,7 @@ CONFIG_MAIN_STACK_SIZE=4096
 
 # FOTA
 CONFIG_AWS_FOTA=y
-CONFIG_NRF_DOWNLOAD_CLIENT_STACK_SIZE=4096
+CONFIG_HTTP_DOWNLOAD_STACK_SIZE=4096
 CONFIG_HEAP_MEM_POOL_SIZE=4096
 CONFIG_FLOAT=y
 
