net: lib: azure_iot_hub: Rework and integrate Azure SDK for C
This patch is a rework of the Azure IoT Hub library.
- Use Azure SDK for embedded C in the library.
- Create a common MQTT helper API that both the IoT Hub and DPS
  connections can use.
- Simplify the public API and leave more control over DPS to the user.
- Convert tests to use Unity and CMock and add more test cases.

Signed-off-by: Jan Tore Guggedal <jantore.guggedal@nordicsemi.no>

--- a/west.yml
+++ b/west.yml
@@ -31,6 +31,8 @@ manifest:
       url-base: https://github.com/NordicSemiconductor
     - name: memfault
       url-base: https://github.com/memfault
+    - name: azure
+      url-base: https://github.com/azure
 
   # If not otherwise specified, the projects below should be obtained
   # from the ncs remote.
@@ -177,6 +179,10 @@ manifest:
       revision: 9f6b3812237fbb0d4157ba3584c13f1644fcbe3a
       groups:
       - nrf5340_audio
+    - name: azure-sdk-for-c
+      path: modules/lib/azure-sdk-for-c
+      revision: 1.3.1
+      remote: azure
 
   # West-related configuration for the nrf repository.
   self:
