benchmark: Add new benchmark component for Zigbee
Add a new subsys for measuring Zigbee performance:
- latency
- throughput
- PER

Signed-off-by: Filip Zajdel <filip.zajdel@nordicsemi.no>

--- a/subsys/zigbee/CMakeLists.txt
+++ b/subsys/zigbee/CMakeLists.txt
@@ -10,6 +10,8 @@ zephyr_interface_library_named(zigbee)
 
 target_include_directories(zigbee INTERFACE osif)
 
+zephyr_include_directories_ifdef(CONFIG_ZIGBEE_SHELL cli)
+
 zephyr_library()
 
 zephyr_library_link_libraries(zigbee)
