--- a/subsys/CMakeLists.txt
+++ b/subsys/CMakeLists.txt
@@ -57,3 +57,5 @@ add_subdirectory_ifdef(CONFIG_NRF_RPC nrf_rpc)
 add_subdirectory_ifdef(CONFIG_NRF_802154_RADIO_DRIVER ieee802154)
 add_subdirectory_ifdef(CONFIG_NRF_DM dm)
 add_subdirectory_ifdef(CONFIG_EMDS emds)
+
+add_subdirectory(benchmark)
