manifest: Update MPSL and SoftDevice Controller
Updates SDC and MPSL.

Signed-off-by: Olivier Lesage <olivier.lesage@nordicsemi.no>

--- a/west.yml
+++ b/west.yml
@@ -110,7 +110,7 @@ manifest:
     - name: nrfxlib
       repo-path: sdk-nrfxlib
       path: nrfxlib
-      revision: 766cc270caca3975fa6d924ada43177089040fcc
+      revision: pull/696/head
     - name: trusted-firmware-m
       repo-path: sdk-trusted-firmware-m
       path: modules/tee/tf-m/trusted-firmware-m
