applications: nrf5340_audio: Refactor streamctrl
- Make changes to streamctrl to reflect going over to using BAP

Signed-off-by: Alexander Svensen <alexander.svensen@nordicsemi.no>

--- a/applications/nrf5340_audio/src/audio/Kconfig
+++ b/applications/nrf5340_audio/src/audio/Kconfig
@@ -232,8 +232,8 @@ endmenu # Stream
 #----------------------------------------------------------------------------#
 menu "Log levels"
 
-config LOG_AUDIO_CODEC_LEVEL
-	int "Log level for streamctrl"
+config LOG_AUDIO_SYSTEM_LEVEL
+	int "Log level for audio system"
 	default 3
 
 config LOG_STREAMCTRL_LEVEL
