applications: nrf5340_audio: Implement BIS using BAP (#2)
Hardcoded version

Signed-off-by: Erik Robstad <erik.robstad@nordicsemi.no>

--- a/applications/nrf5340_audio/src/bluetooth/CMakeLists.txt
+++ b/applications/nrf5340_audio/src/bluetooth/CMakeLists.txt
@@ -9,3 +9,15 @@ target_sources(app PRIVATE
 	       ${CMAKE_CURRENT_SOURCE_DIR}/ble_core.c
 	       ${CMAKE_CURRENT_SOURCE_DIR}/ble_hci_vsc.c
 )
+
+if (CONFIG_TRANSPORT_CIS)
+	target_sources(app PRIVATE
+		       ${CMAKE_CURRENT_SOURCE_DIR}/le_audio_cis_gateway.c
+		       ${CMAKE_CURRENT_SOURCE_DIR}/le_audio_cis_headset.c)
+elseif (CONFIG_TRANSPORT_BIS)
+	target_sources(app PRIVATE
+		       ${CMAKE_CURRENT_SOURCE_DIR}/le_audio_bis_gateway.c
+		       ${CMAKE_CURRENT_SOURCE_DIR}/le_audio_bis_headset.c)
+else()
+	message(FATAL_ERROR "CIS or BIS mode must be chosen")
+endif()
