--- a/applications/nrf5340_audio/overlay-gateway.conf
+++ b/applications/nrf5340_audio/overlay-gateway.conf
@@ -7,25 +7,15 @@
 # Set as gateway device
 CONFIG_AUDIO_DEV=2
 
-# General
-CONFIG_BT_CENTRAL=y
-CONFIG_BT_BROADCASTER=y
-CONFIG_BT_VCS_CLIENT=y
-CONFIG_BT_DEVICE_NAME="NRF5340_AUDIO"
-CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
-
-# USB related configs
+# USB
 CONFIG_USB_DEVICE_STACK=y
-
 # Avoid redundant warnings for endpoint setting in USB stack
 CONFIG_USB_DRIVER_LOG_LEVEL_ERR=y
 CONFIG_USB_DEVICE_LOG_LEVEL_ERR=y
-
 # Net buf options needed for USB stack
 CONFIG_NET_BUF=y
 # Size of 1ms of stereo audio in bytes (48kHz, 16 bit)
 CONFIG_NET_BUF_USER_DATA_SIZE=192
-
 # USB audio related configs
 CONFIG_USB_DEVICE_AUDIO=y
 ## TODO: Nordic VID, change accordingly
@@ -35,11 +25,23 @@ CONFIG_USB_DEVICE_PID=0x530A
 CONFIG_USB_DEVICE_PRODUCT="nRF5340 USB Audio"
 CONFIG_USB_DEVICE_MANUFACTURER="Nordic Semiconductor AS"
 
-# Dual headsets demo requires gateway to establish two ACL connections
-# and two ISO connections
-CONFIG_BT_MAX_CONN=2
-CONFIG_BT_ISO_MAX_CHAN=2
-CONFIG_BT_MAX_PAIRED=2
-
+# LC3
 CONFIG_LC3_ENC_CHAN_MAX=2
 CONFIG_LC3_DEC_CHAN_MAX=1
+
+# ***** CIS *****
+# --- REMOVE THE ONES THAT ARE NOT NEEDED ---
+# CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
+
+# CONFIG_BT_CENTRAL=y
+# CONFIG_BT_BROADCASTER=y
+# CONFIG_BT_VCS_CLIENT=y
+# CONFIG_BT_DEVICE_NAME="NRF5340_AUDIO"
+# CONFIG_BT_MAX_CONN=2
+# CONFIG_BT_ISO_MAX_CHAN=2
+# CONFIG_BT_MAX_PAIRED=2
+
+# ***** BIS *****
+CONFIG_TRANSPORT_BIS=y
+CONFIG_BT_AUDIO_BROADCAST_SOURCE=y
+CONFIG_BT_DEVICE_NAME="Broadcast Audio Source"
