--- a/applications/nrf5340_audio/overlay-headset.conf
+++ b/applications/nrf5340_audio/overlay-headset.conf
@@ -7,17 +7,19 @@
 # Set as headset device
 CONFIG_AUDIO_DEV=1
 
-# General
-CONFIG_BT_PERIPHERAL=y
-CONFIG_BT_VCS=y
-
-# Temporarily disabled connection parameter update request from peripheral
-# All connection parameters are controlled by central side
-CONFIG_BT_GAP_PERIPHERAL_PREF_PARAMS=n
-
-# Dual CIS demo requires headset to accept one ACL connection and one ISO channel
-CONFIG_BT_MAX_CONN=1
-CONFIG_BT_ISO_MAX_CHAN=1
-
+# LC3
 CONFIG_LC3_ENC_CHAN_MAX=1
 CONFIG_LC3_DEC_CHAN_MAX=1
+
+# ***** CIS *****
+# --- REMOVE THE ONES THAT ARE NOT NEEDED ---
+# CONFIG_BT_PERIPHERAL=y
+# CONFIG_BT_VCS=y
+# CONFIG_BT_GAP_PERIPHERAL_PREF_PARAMS=n
+# CONFIG_BT_MAX_CONN=1
+# CONFIG_BT_ISO_MAX_CHAN=1
+
+# ***** BIS *****
+CONFIG_TRANSPORT_BIS=y
+CONFIG_BT_AUDIO_BROADCAST_SINK=y
+CONFIG_BT_DEVICE_NAME="Broadcast Audio Sink"
