--- a/applications/nrf5340_audio/prj.conf
+++ b/applications/nrf5340_audio/prj.conf
@@ -10,52 +10,23 @@ CONFIG_REBOOT=y
 CONFIG_MAIN_THREAD_PRIORITY=10
 CONFIG_MAIN_STACK_SIZE=1940
 
+# Bluetooth
+CONFIG_BT_AUDIO=y
+# Make sure we have enough space to receive one frame of encoded data
+# The values set below are extended for higher BLE transmission capability
+CONFIG_BT_ISO_RX_MTU=190
+CONFIG_BT_ISO_TX_MTU=190
+# Not supported on Packetcraft controller
+CONFIG_BT_ATT_ENFORCE_FLOW=n
 # Disable Zephyr HCI Vendor-Specific extensions
 CONFIG_BT_HCI_VS_EXT=n
 
 # As long as thread names are used, config must be set to "y"
 CONFIG_THREAD_NAME=y
 
-# Bluetooth
-CONFIG_BT_PRIVACY=n
-CONFIG_BT_GATT_CLIENT=y
-CONFIG_BT_GATT_DYNAMIC_DB=y
-
-# Make sure we have enough space to receive one frame of encoded data
-# The values set below are extended for higher BLE transmission capability
-CONFIG_BT_ISO_RX_MTU=190
-CONFIG_BT_ISO_TX_MTU=190
-CONFIG_BT_L2CAP_TX_BUF_COUNT=6
-CONFIG_BT_RX_STACK_SIZE=2000
-CONFIG_BT_BUF_ACL_RX_SIZE=259
-
-# Not supported on Packetcraft controller
-CONFIG_BT_ATT_ENFORCE_FLOW=n
-
-# Only do pairing without bonding
-CONFIG_BT_BONDABLE=n
-CONFIG_BT_AUDIO=y
-CONFIG_BT_EXT_ADV=y
-CONFIG_BT_PER_ADV=y
-CONFIG_BT_ISO_CENTRAL=y
-CONFIG_BT_ISO_PERIPHERAL=y
-CONFIG_BT_ISO_BROADCASTER=y
-CONFIG_BT_ISO_SYNC_RECEIVER=y
-
-# Temporary, enable the following to meet BT_ISO dependencies
-CONFIG_BT_OBSERVER=y
-
 # Audio sync timer
 CONFIG_NRFX_TIMER1=y
 CONFIG_NRFX_DPPI=y
-
-# Need to turn on SMP when involving services in LE audio profiles
-CONFIG_BT_SMP=y
-
-# Temporarily disabled connetion parameter and PHY update
-CONFIG_BT_GAP_AUTO_UPDATE_CONN_PARAMS=n
-CONFIG_BT_AUTO_PHY_UPDATE=n
-CONFIG_BT_AUTO_DATA_LEN_UPDATE=n
 
 # Required for calculating test tones
 CONFIG_CMSIS_DSP=y
@@ -70,3 +41,24 @@ CONFIG_NCS_INCLUDE_RPMSG_CHILD_IMAGE=n
 # Workaround to not use fatal_error.c in NCS. Note that the system may still
 # reset on error depending on the build configuraion
 CONFIG_RESET_ON_FATAL_ERROR=n
+
+# Removed configs - maybe needed for CIS
+# CONFIG_BT_PRIVACY=n
+# CONFIG_BT_GATT_CLIENT=y
+# CONFIG_BT_GATT_DYNAMIC_DB=y
+# CONFIG_BT_L2CAP_TX_BUF_COUNT=6
+# CONFIG_BT_RX_STACK_SIZE=2000
+# CONFIG_BT_BUF_ACL_RX_SIZE=259
+# CONFIG_BT_BONDABLE=n
+# CONFIG_BT_AUDIO=y
+# CONFIG_BT_EXT_ADV=y
+# CONFIG_BT_PER_ADV=y
+# CONFIG_BT_ISO_UNICAST=y
+# CONFIG_BT_ISO_BROADCASTER=y
+# CONFIG_BT_ISO_SYNC_RECEIVER=y
+# CONFIG_BT_OBSERVER=y
+# CONFIG_BT_PERIPHERAL=y
+# CONFIG_BT_SMP=y
+# CONFIG_BT_GAP_AUTO_UPDATE_CONN_PARAMS=n
+# CONFIG_BT_AUTO_PHY_UPDATE=n
+# CONFIG_BT_AUTO_DATA_LEN_UPDATE=n
