--- a/applications/nrf5340_audio/src/audio/CMakeLists.txt
+++ b/applications/nrf5340_audio/src/audio/CMakeLists.txt
@@ -5,7 +5,7 @@
 #
 
 target_sources(app PRIVATE
-	       ${CMAKE_CURRENT_SOURCE_DIR}/audio_codec.c
+	       ${CMAKE_CURRENT_SOURCE_DIR}/audio_system.c
 	       ${CMAKE_CURRENT_SOURCE_DIR}/streamctrl.c
 	       ${CMAKE_CURRENT_SOURCE_DIR}/audio_datapath.c
 	       ${CMAKE_CURRENT_SOURCE_DIR}/audio_sync_timer.c
