--- a/applications/nrf5340_audio/prj.conf
+++ b/applications/nrf5340_audio/prj.conf
@@ -12,10 +12,6 @@ CONFIG_MAIN_STACK_SIZE=1940
 
 # Bluetooth
 CONFIG_BT_AUDIO=y
-# Make sure we have enough space to receive one frame of encoded data
-# The values set below are extended for higher BLE transmission capability
-CONFIG_BT_ISO_RX_MTU=190
-CONFIG_BT_ISO_TX_MTU=190
 # Not supported on Packetcraft controller
 CONFIG_BT_ATT_ENFORCE_FLOW=n
 # Disable Zephyr HCI Vendor-Specific extensions
@@ -62,3 +58,5 @@ CONFIG_RESET_ON_FATAL_ERROR=n
 # CONFIG_BT_GAP_AUTO_UPDATE_CONN_PARAMS=n
 # CONFIG_BT_AUTO_PHY_UPDATE=n
 # CONFIG_BT_AUTO_DATA_LEN_UPDATE=n
+# CONFIG_BT_ISO_RX_MTU=190
+# CONFIG_BT_ISO_TX_MTU=190
