--- a/west.yml
+++ b/west.yml
@@ -31,6 +31,8 @@ manifest:
       url-base: https://github.com/NordicSemiconductor
     - name: memfault
       url-base: https://github.com/memfault
+    - name: erikrobstad
+      url-base: https://github.com/erikrobstad
 
   # If not otherwise specified, the projects below should be obtained
   # from the ncs remote.
@@ -50,7 +52,8 @@ manifest:
     # https://developer.nordicsemi.com/nRF_Connect_SDK/doc/latest/zephyr/guides/modules.html
     - name: zephyr
       repo-path: sdk-zephyr
-      revision: 35357799b464e03a9fe78e9dbba9fcd539597f3c
+      revision: 82d7eb4af2b2c4125b2c222f3a7dac5bd0bd4909
+      remote: erikrobstad
       import:
         # In addition to the zephyr repository itself, NCS also
         # imports the contents of zephyr/west.yml at the above
