applications: nrf5340_audio: CIS single link with BAP API (#6)
* applications: nrf5340_audio: CIS single link with BAP API

Add support for single CIS link through BAP API
Signed-off-by: Jui-Chou Chung <jui-chou.chung@nordicsemi.no>

* applications: nrf5340_audio: CIS single link with BAP API

Update the log level from DBG to INF

Signed-off-by: Jui-Chou Chung <jui-chou.chung@nordicsemi.no>

* applications: nrf5340_audio: CIS single link with BAP API

Change the order of header file and fixed ADV/SCAN type issue

Signed-off-by: Jui-Chou Chung <jui-chou.chung@nordicsemi.no>

* applications: nrf5340_audio: CIS single link with BAP API

Update the header in gateway

Signed-off-by: Jui-Chou Chung <jui-chou.chung@nordicsemi.no>

* applications: nrf5340_audio: CIS single link with BAP API

Use CONFIG_BT_DEVICE_NAME for CIG gateway/headset filtering
Return the result for le_audio_enable/disable
Improve prj.conf

Signed-off-by: Jui-Chou Chung <jui-chou.chung@nordicsemi.no>

--- a/applications/nrf5340_audio/prj.conf
+++ b/applications/nrf5340_audio/prj.conf
@@ -16,6 +16,20 @@ CONFIG_BT_AUDIO=y
 CONFIG_BT_ATT_ENFORCE_FLOW=n
 # Disable Zephyr HCI Vendor-Specific extensions
 CONFIG_BT_HCI_VS_EXT=n
+CONFIG_BT_PRIVACY=n
+CONFIG_BT_GATT_CLIENT=y
+CONFIG_BT_GATT_DYNAMIC_DB=y
+CONFIG_BT_L2CAP_TX_BUF_COUNT=6
+CONFIG_BT_BUF_ACL_RX_SIZE=259
+CONFIG_BT_BONDABLE=n
+CONFIG_BT_EXT_ADV=y
+CONFIG_BT_SMP=y
+CONFIG_BT_GAP_AUTO_UPDATE_CONN_PARAMS=n
+CONFIG_BT_AUTO_PHY_UPDATE=n
+CONFIG_BT_AUTO_DATA_LEN_UPDATE=n
+CONFIG_BT_ISO_RX_MTU=190
+CONFIG_BT_ISO_TX_MTU=190
+CONFIG_BT_DEVICE_NAME="NRF5340_AUDIO"
 
 # As long as thread names are used, config must be set to "y"
 CONFIG_THREAD_NAME=y
@@ -38,25 +52,3 @@ CONFIG_NCS_INCLUDE_RPMSG_CHILD_IMAGE=n
 # reset on error depending on the build configuraion
 CONFIG_RESET_ON_FATAL_ERROR=n
 
-# Removed configs - maybe needed for CIS
-# CONFIG_BT_PRIVACY=n
-# CONFIG_BT_GATT_CLIENT=y
-# CONFIG_BT_GATT_DYNAMIC_DB=y
-# CONFIG_BT_L2CAP_TX_BUF_COUNT=6
-# CONFIG_BT_RX_STACK_SIZE=2000
-# CONFIG_BT_BUF_ACL_RX_SIZE=259
-# CONFIG_BT_BONDABLE=n
-# CONFIG_BT_AUDIO=y
-# CONFIG_BT_EXT_ADV=y
-# CONFIG_BT_PER_ADV=y
-# CONFIG_BT_ISO_UNICAST=y
-# CONFIG_BT_ISO_BROADCASTER=y
-# CONFIG_BT_ISO_SYNC_RECEIVER=y
-# CONFIG_BT_OBSERVER=y
-# CONFIG_BT_PERIPHERAL=y
-# CONFIG_BT_SMP=y
-# CONFIG_BT_GAP_AUTO_UPDATE_CONN_PARAMS=n
-# CONFIG_BT_AUTO_PHY_UPDATE=n
-# CONFIG_BT_AUTO_DATA_LEN_UPDATE=n
-# CONFIG_BT_ISO_RX_MTU=190
-# CONFIG_BT_ISO_TX_MTU=190
