--- a/applications/nrf5340_audio/overlay-gateway.conf
+++ b/applications/nrf5340_audio/overlay-gateway.conf
@@ -30,18 +30,12 @@ CONFIG_LC3_ENC_CHAN_MAX=2
 CONFIG_LC3_DEC_CHAN_MAX=1
 
 # ***** CIS *****
-# --- REMOVE THE ONES THAT ARE NOT NEEDED ---
-# CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
-
-# CONFIG_BT_CENTRAL=y
-# CONFIG_BT_BROADCASTER=y
-# CONFIG_BT_VCS_CLIENT=y
-# CONFIG_BT_DEVICE_NAME="NRF5340_AUDIO"
-# CONFIG_BT_MAX_CONN=2
-# CONFIG_BT_ISO_MAX_CHAN=2
-# CONFIG_BT_MAX_PAIRED=2
+CONFIG_BT_AUDIO_UNICAST_CLIENT=y
+CONFIG_BT_MAX_CONN=1
+CONFIG_BT_ISO_MAX_CHAN=1
+CONFIG_BT_MAX_PAIRED=1
 
 # ***** BIS *****
-CONFIG_TRANSPORT_BIS=y
-CONFIG_BT_AUDIO_BROADCAST_SOURCE=y
-CONFIG_BT_DEVICE_NAME="Broadcast Audio Source"
+#CONFIG_TRANSPORT_BIS=y
+#CONFIG_BT_AUDIO_BROADCAST_SOURCE=y
+#CONFIG_BT_DEVICE_NAME="Broadcast Audio Source"
