--- a/applications/nrf5340_audio/overlay-headset.conf
+++ b/applications/nrf5340_audio/overlay-headset.conf
@@ -12,14 +12,15 @@ CONFIG_LC3_ENC_CHAN_MAX=1
 CONFIG_LC3_DEC_CHAN_MAX=1
 
 # ***** CIS *****
-# --- REMOVE THE ONES THAT ARE NOT NEEDED ---
-# CONFIG_BT_PERIPHERAL=y
-# CONFIG_BT_VCS=y
-# CONFIG_BT_GAP_PERIPHERAL_PREF_PARAMS=n
-# CONFIG_BT_MAX_CONN=1
-# CONFIG_BT_ISO_MAX_CHAN=1
+CONFIG_BT_PERIPHERAL=y
+CONFIG_BT_GAP_PERIPHERAL_PREF_PARAMS=n
+CONFIG_BT_MAX_CONN=1
+CONFIG_BT_ISO_MAX_CHAN=1
+CONFIG_BT_AUDIO_UNICAST_SERVER=y
+CONFIG_BT_ASCS_ASE_SNK_COUNT=1
+CONFIG_BT_ASCS_ASE_SRC_COUNT=0
 
 # ***** BIS *****
-CONFIG_TRANSPORT_BIS=y
-CONFIG_BT_AUDIO_BROADCAST_SINK=y
-CONFIG_BT_DEVICE_NAME="Broadcast Audio Sink"
+#CONFIG_TRANSPORT_BIS=y
+#CONFIG_BT_AUDIO_BROADCAST_SINK=y
+#CONFIG_BT_DEVICE_NAME="Broadcast Audio Sink"
