samples: bluetooth: peripheral_proximity
new add peripheral_proximity sample

Signed-off-by: andrew li <andrew.li@nordicsemi.no>

--- a/subsys/bluetooth/services/Kconfig
+++ b/subsys/bluetooth/services/Kconfig
@@ -30,6 +30,8 @@ rsource "Kconfig.latency"
 rsource "Kconfig.latency_c"
 rsource "Kconfig.hrs_client"
 rsource "Kconfig.ddfs"
+rsource "Kconfig.lls"
+rsource "Kconfig.ias"
 rsource "fast_pair/Kconfig.fast_pair"
 
 endmenu
