--- a/subsys/bluetooth/services/CMakeLists.txt
+++ b/subsys/bluetooth/services/CMakeLists.txt
@@ -24,4 +24,6 @@ zephyr_sources_ifdef(CONFIG_BT_LATENCY_CLIENT latency_client.c)
 zephyr_sources_ifdef(CONFIG_BT_RSCS rscs.c)
 zephyr_sources_ifdef(CONFIG_BT_HRS_CLIENT hrs_client.c)
 zephyr_sources_ifdef(CONFIG_BT_DDFS ddfs.c)
+zephyr_sources_ifdef(CONFIG_BT_NRF_LLS lls.c)
+zephyr_sources_ifdef(CONFIG_BT_NRF_IAS ias.c)
 add_subdirectory_ifdef(CONFIG_BT_FAST_PAIR fast_pair)
