ATv2 cloud codec refactor: impl cloud buffers using code generation
This patch refactors the cloud buffers into the auto-generated files
generated_cloud_buffers.{.h,.c} using the generator.py script.
Although this approach is not quite as brief,
the produced files are much more readable and allow easy debugging.

Signed-off-by: Maximilian Deubel <maximilian.deubel@nordicsemi.no>

--- a/applications/asset_tracker_v2/src/cloud/cloud_codec/CMakeLists.txt
+++ b/applications/asset_tracker_v2/src/cloud/cloud_codec/CMakeLists.txt
@@ -17,10 +17,23 @@ target_sources_ifdef(CONFIG_CLOUD_CODEC_NRF_CLOUD app
 target_sources_ifdef(CONFIG_CLOUD_CODEC_LWM2M app
                      PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/lwm2m/lwm2m_codec.c)
 
-target_sources(app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/cloud_codec_ringbuffer.c)
-
 # Include JSON convenience APIs if used by the respective cloud codec backend.
 if (CONFIG_CLOUD_CODEC_AWS_IOT OR CONFIG_CLOUD_CODEC_AZURE_IOT_HUB OR CONFIG_CLOUD_CODEC_NRF_CLOUD)
         target_sources(app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/json_helpers.c)
         target_sources(app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/json_common.c)
 endif()
+
+# https://stackoverflow.com/a/51881170
+add_custom_command(
+    COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/generator.py
+    DEPENDS generator.py
+    OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/generated_cloud_buffers.c ${CMAKE_CURRENT_SOURCE_DIR}/generated_cloud_buffers.h
+    COMMENT "Generating code for generated_cloud_buffers.c"
+)
+add_custom_target(
+  generated_cloud_buffers
+  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/generated_cloud_buffers.c
+)
+add_dependencies(app generated_cloud_buffers)
+
+target_sources(app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/generated_cloud_buffers.c)
