--- a/tests/lib/at_sms_cert/testcase.yaml
+++ b/tests/lib/at_sms_cert/testcase.yaml
@@ -2,3 +2,6 @@ tests:
   at_sms_cert.functionality_test:
     platform_allow: nrf9160dk_nrf9160_ns
     tags: at_sms_cert
+    harness: ztest
+    harness_config:
+      fixture: sim_card
