applications: nrf5340_audio: Restructure usage of configs (#21)
Move most of the configurations from .conf files
to Kconfig.defaults files.
Only using prj.conf (default debug) and
prj_release.conf for release.

Signed-off-by: Erik Robstad <erik.robstad@nordicsemi.no>

--- a/applications/nrf5340_audio/src/bluetooth/CMakeLists.txt
+++ b/applications/nrf5340_audio/src/bluetooth/CMakeLists.txt
@@ -11,13 +11,29 @@ target_sources(app PRIVATE
 )
 
 if (CONFIG_TRANSPORT_CIS)
-	target_sources(app PRIVATE
-		       ${CMAKE_CURRENT_SOURCE_DIR}/le_audio_cis_gateway.c
-		       ${CMAKE_CURRENT_SOURCE_DIR}/le_audio_cis_headset.c)
+	# HEADSET
+	if (CONFIG_AUDIO_DEV EQUAL 1)
+		target_sources(app PRIVATE
+			${CMAKE_CURRENT_SOURCE_DIR}/le_audio_cis_headset.c)
+	# GATEWAY
+	elseif (CONFIG_AUDIO_DEV EQUAL 2)
+		target_sources(app PRIVATE
+			${CMAKE_CURRENT_SOURCE_DIR}/le_audio_cis_gateway.c)
+	else()
+		message(FATAL_ERROR "GATEWAY or HEADSET device must be chosen")
+	endif()
 elseif (CONFIG_TRANSPORT_BIS)
-	target_sources(app PRIVATE
-		       ${CMAKE_CURRENT_SOURCE_DIR}/le_audio_bis_gateway.c
-		       ${CMAKE_CURRENT_SOURCE_DIR}/le_audio_bis_headset.c)
+	# HEADSET
+	if (CONFIG_AUDIO_DEV EQUAL 1)
+		target_sources(app PRIVATE
+			${CMAKE_CURRENT_SOURCE_DIR}/le_audio_bis_headset.c)
+	# GATEWAY
+	elseif (CONFIG_AUDIO_DEV EQUAL 2)
+		target_sources(app PRIVATE
+			${CMAKE_CURRENT_SOURCE_DIR}/le_audio_bis_gateway.c)
+	else()
+		message(FATAL_ERROR "GATEWAY or HEADSET device must be chosen")
+	endif()
 else()
 	message(FATAL_ERROR "CIS or BIS mode must be chosen")
 endif()
