--- a/applications/nrf5340_audio/prj.conf
+++ b/applications/nrf5340_audio/prj.conf
@@ -4,50 +4,64 @@
 # SPDX-License-Identifier: LicenseRef-Nordic-5-Clause
 #
 
-# General
+# nRF5340 Audio
 CONFIG_NRF5340_AUDIO=y
-CONFIG_REBOOT=y
-CONFIG_MAIN_THREAD_PRIORITY=10
-CONFIG_MAIN_STACK_SIZE=1940
 
-# Bluetooth
-CONFIG_BT_AUDIO=y
-# Not supported on Packetcraft controller
-CONFIG_BT_ATT_ENFORCE_FLOW=n
-# Disable Zephyr HCI Vendor-Specific extensions
-CONFIG_BT_HCI_VS_EXT=n
-CONFIG_BT_PRIVACY=n
-CONFIG_BT_GATT_CLIENT=y
-CONFIG_BT_GATT_DYNAMIC_DB=y
-CONFIG_BT_L2CAP_TX_BUF_COUNT=6
-CONFIG_BT_BUF_ACL_RX_SIZE=259
-CONFIG_BT_BONDABLE=n
-CONFIG_BT_EXT_ADV=y
-CONFIG_BT_SMP=y
-CONFIG_BT_GAP_AUTO_UPDATE_CONN_PARAMS=n
-CONFIG_BT_AUTO_PHY_UPDATE=n
-CONFIG_BT_AUTO_DATA_LEN_UPDATE=n
-CONFIG_BT_ISO_RX_MTU=190
-CONFIG_BT_ISO_TX_MTU=190
-CONFIG_BT_DEVICE_NAME="NRF5340_AUDIO"
+# General
+CONFIG_DEBUG=y
+CONFIG_DEBUG_INFO=y
+CONFIG_ASSERT=y
+CONFIG_STACK_USAGE=y
+CONFIG_THREAD_RUNTIME_STATS=y
+CONFIG_STACK_SENTINEL=y
+CONFIG_INIT_STACKS=y
 
-# As long as thread names are used, config must be set to "y"
-CONFIG_THREAD_NAME=y
+# Uart driver
+CONFIG_SERIAL=y
 
-# Audio sync timer
-CONFIG_NRFX_TIMER1=y
-CONFIG_NRFX_DPPI=y
+# Logging
+CONFIG_LOG=y
+CONFIG_LOG_MODE_DEFERRED=y
+CONFIG_LOG_BACKEND_UART=y
+CONFIG_LOG_BACKEND_RTT=n
+CONFIG_LOG_DEFAULT_LEVEL=4
+CONFIG_NEWLIB_LIBC_FLOAT_PRINTF=y
+CONFIG_LOG_TAG_MAX_LEN=2
+CONFIG_LOG_TAG_DEFAULT="--"
+## Avoid redundant warnings for endpoint setting in USB stack
+CONFIG_USB_DRIVER_LOG_LEVEL_ERR=y
+CONFIG_USB_DEVICE_LOG_LEVEL_ERR=y
 
-# Required for calculating test tones
-CONFIG_CMSIS_DSP=y
-CONFIG_CMSIS_DSP_FASTMATH=y
+# Console related defines
+CONFIG_CONSOLE=y
+CONFIG_RTT_CONSOLE=y
+CONFIG_UART_CONSOLE=y
 
-# Channel assignment writes to UICR
-CONFIG_NRFX_NVMC=y
+# Shell related defines
+CONFIG_SHELL=y
+CONFIG_KERNEL_SHELL=y
+CONFIG_USE_SEGGER_RTT=y
+## Disable logs on RTT
+CONFIG_SHELL_RTT_INIT_LOG_LEVEL_NONE=y
+CONFIG_SHELL_BACKEND_RTT=y
+CONFIG_SHELL_BACKEND_SERIAL=n
+CONFIG_SHELL_VT100_COLORS=y
+CONFIG_SHELL_STACK_SIZE=1024
+CONFIG_SHELL_CMD_BUFF_SIZE=128
+## Reduce shell memory usage
+CONFIG_SHELL_WILDCARD=n
+CONFIG_SHELL_HELP_ON_WRONG_ARGUMENT_COUNT=n
+CONFIG_SHELL_STATS=n
+CONFIG_SHELL_CMDS=n
+CONFIG_SHELL_HISTORY=y
 
-# Avoid multi-build system build network core firmware
-CONFIG_NCS_INCLUDE_RPMSG_CHILD_IMAGE=n
+# Turn off default shell commands
+CONFIG_I2C_SHELL=n
+CONFIG_HWINFO_SHELL=n
+CONFIG_CLOCK_CONTROL_NRF_SHELL=n
+CONFIG_FLASH_SHELL=n
+CONFIG_DEVICE_SHELL=n
 
-# Workaround to not use fatal_error.c in NCS. Note that the system may still
-# reset on error depending on the build configuraion
-CONFIG_RESET_ON_FATAL_ERROR=n
+# Enable BT debug
+CONFIG_BT_DEBUG_LOG=y
+CONFIG_BT_LOG_LEVEL_WRN=y
