wifi: Add sdk-hostap to the manifest
This will be used by the upcoming Wi-Fi driver.

Signed-off-by: Sridhar Nuvusetty <sridhar.nuvusetty@nordicsemi.no>
Signed-off-by: Sachin Kulkarni <sachin.kulkarni@nordicsemi.no>
Signed-off-by: Ravi Dondaputi <ravi.dondaputi@nordicsemi.no>
Signed-off-by: Krishna T <krishna.t@nordicsemi.no>

--- a/west.yml
+++ b/west.yml
@@ -98,6 +98,10 @@ manifest:
     #
     # Some of these are also Zephyr modules which have NCS-specific
     # changes.
+    - name: sdk-hostap
+      repo-path: sdk-hostap
+      path: modules/lib/hostap
+      revision: d12a5ef640e8fb406f187fcb3962184f91d97902
     - name: mcuboot
       repo-path: sdk-mcuboot
       revision: v1.9.99-ncs1
