Add debug lib for nrf52dk
Signed-off-by: Anders Storrø <anders.storro@nordicsemi.no>

--- a/lib/dk_buttons_and_leds/CMakeLists.txt
+++ b/lib/dk_buttons_and_leds/CMakeLists.txt
@@ -6,3 +6,7 @@
 
 zephyr_library()
 zephyr_library_sources(dk_buttons_and_leds.c)
+
+if(CONFIG_NRF52_DBG_PINS)
+zephyr_library_sources(nrf52_dbg_pins.c)
+endif()
