manifest: update nrfxlib revision
This commit updates sdk-nrfxlib revision to bring in the latest
changes in MPSL and Softdevice Controller.

Signed-off-by: Jedrzej Ciupis <jedrzej.ciupis@nordicsemi.no>

--- a/west.yml
+++ b/west.yml
@@ -108,7 +108,7 @@ manifest:
     - name: nrfxlib
       repo-path: sdk-nrfxlib
       path: nrfxlib
-      revision: v1.9.1
+      revision: 541341f0cc49da47efba4768a1938e7c1767b54d
     - name: trusted-firmware-m
       repo-path: sdk-trusted-firmware-m
       path: modules/tee/tf-m/trusted-firmware-m
