--- a/subsys/bluetooth/services/CMakeLists.txt
+++ b/subsys/bluetooth/services/CMakeLists.txt
@@ -25,4 +25,5 @@ zephyr_sources_ifdef(CONFIG_BT_RSCS rscs.c)
 zephyr_sources_ifdef(CONFIG_BT_HRS_CLIENT hrs_client.c)
 zephyr_sources_ifdef(CONFIG_BT_DDFS ddfs.c)
 zephyr_sources_ifdef(CONFIG_BT_MDS mds.c)
+zephyr_sources_ifdef(CONFIG_BT_NRF_LLS lls.c)
 add_subdirectory_ifdef(CONFIG_BT_FAST_PAIR fast_pair)
