--- a/applications/nrf5340_audio/src/audio/Kconfig
+++ b/applications/nrf5340_audio/src/audio/Kconfig
@@ -154,9 +154,17 @@ config SW_CODEC_PLC_DISABLED
 menu "LC3"
 visible if SW_CODEC_LC3
 
-config LC3_MONO_BITRATE
+config LC3_BITRATE
 	int "Bitrate for LC3"
 	default 96000
+
+config LC3_BITRATE_MAX
+	int "Max bitrate for LC3"
+	default 124000
+
+config LC3_BITRATE_MIN
+	int "Min bitrate for LC3"
+	default 32000
 
 osource "../modules/lib/lc3/Kconfig"
 
