--- a/west.yml
+++ b/west.yml
@@ -52,7 +52,7 @@ manifest:
     # https://developer.nordicsemi.com/nRF_Connect_SDK/doc/latest/zephyr/guides/modules.html
     - name: zephyr
       repo-path: sdk-zephyr
-      revision: nrf5340_audio_implement_bap
+      revision: bap_dual_cis
       remote: erikrobstad
       import:
         # In addition to the zephyr repository itself, NCS also
