manifest: Update with tags for NCS v2.0.2
Update revisions of required repositories with NCS v2.0.2 tags.

Signed-off-by: Andrzej Głąbek <andrzej.glabek@nordicsemi.no>

--- a/west.yml
+++ b/west.yml
@@ -50,7 +50,7 @@ manifest:
     # https://developer.nordicsemi.com/nRF_Connect_SDK/doc/latest/zephyr/guides/modules.html
     - name: zephyr
       repo-path: sdk-zephyr
-      revision: be360e7db2db7e1f0e9fcac686a08e62e350bf55
+      revision: v3.0.99-ncs1-1
       import:
         # In addition to the zephyr repository itself, NCS also
         # imports the contents of zephyr/west.yml at the above
@@ -108,7 +108,7 @@ manifest:
     - name: nrfxlib
       repo-path: sdk-nrfxlib
       path: nrfxlib
-      revision: 6e4f78f25a860fb0bb135605e3f47ae880ed31aa
+      revision: v2.0.2
     - name: trusted-firmware-m
       repo-path: sdk-trusted-firmware-m
       path: modules/tee/tf-m/trusted-firmware-m
@@ -120,7 +120,7 @@ manifest:
     - name: matter
       repo-path: sdk-connectedhomeip
       path: modules/lib/matter
-      revision: 5959a2ed66563f5f34cb6229cba4698e460f57d4
+      revision: v2.0.2
       submodules:
         - name: nlio
           path: third_party/nlio/repo
@@ -131,7 +131,7 @@ manifest:
     - name: nrf-802154
       repo-path: sdk-nrf-802154
       path: nrf-802154
-      revision: v2.0.1
+      revision: v2.0.2
       groups:
       - nrf-802154
     - name: cjson
@@ -140,12 +140,12 @@ manifest:
       revision: c6af068b7f05207b28d68880740e4b9ec1e4b50a
     - name: homekit
       repo-path: sdk-homekit
-      revision: 7cc481f270748de82c2573e375caa3fc2119d440
+      revision: v2.0.2
       groups:
       - homekit
     - name: find-my
       repo-path: sdk-find-my
-      revision: v2.0.1
+      revision: v2.0.2
       groups:
       - find-my
     - name: sdk-lc3
